# stock-search

./: README.md  kabutan.ipynb  pyproject.toml  sample-code.ipynb
app/: base_web_driver.py  kabutan_web_driver.py  sample_web_driver.py
