[tool.poetry]
name = "importlib"
version = "0.1.0"
description = ""
authors = ["Katsuyuki MURAKAMI <katsumura0822@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.9.0"
chromedriver-binary-auto = "^0.2.6"
beautifulsoup4 = "^4.12.2"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
